# qmp

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.html  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  QMP-2-0-Introduction.html  QMP-2-changes.html  QMPConfig.cmake.in  QMP_API.html  README  acinclude.m4  aclocal.m4  config.status  configure  configure.ac  index.html  params.json  qmp-config.in  qmp_build_env.sh.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/: CheckSanitizeOpts.cmake  FindDmalloc.cmake
doc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  MessageAPI.htm  QMP-1-0.doc  QMP_API.html  QMPdoxyfile  QMPdoxyfile.in
examples/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  QMP_MILC_test.c  QMP_broadcast.c  QMP_gcomm_perf.c  QMP_grid_test.c  QMP_loopback.c  QMP_msg.c  QMP_perf.c  QMP_qcd_test.c  QMP_show_geom.c  QMP_stride_test.c  QMP_test.c  gm_loop.c
include/: Makefile  Makefile.am  Makefile.in  QMP_P_BGSPI.h  QMP_P_COMMON.h  QMP_P_MPI.h  QMP_P_SINGLE.h  QMP_profiling.h  qmp.h  qmp.hpp  qmp_config.h  qmp_config.h.cmake.in  qmp_config.h.in  stamp-h1
install-scripts/NERSC/: configure_qmp.sh
install-scripts/cygwin/: configure_qmp-single.sh  configure_qmp.sh
install-scripts/jlab/: configure_qmp.sh  configure_qmp_mpich-p4.sh
lib/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  QMP_comm.c  QMP_comm_mpi.c  QMP_comm_single.c  QMP_error.c  QMP_error_mpi.c  QMP_error_single.c  QMP_grid.c  QMP_init.c  QMP_init_mpi.c  QMP_init_single.c  QMP_machine.c  QMP_mem.c  QMP_mem_mpi.c  QMP_mem_single.c  QMP_split.c  QMP_topology.c  QMP_util.c
lib/.deps/: QMP_comm.Po  QMP_error.Po  QMP_grid.Po  QMP_init.Po  QMP_machine.Po  QMP_mem.Po  QMP_split.Po  QMP_topology.Po  QMP_util.Po
lib/bgspi/: QMP_comm_bgspi.c  QMP_init_bgspi.c  QMP_mem_bgspi.c  qspi.c  qspi.h  qspi_internal.h
lib/mpi/: QMP_comm_mpi.c  QMP_error_mpi.c  QMP_init_mpi.c  QMP_mem_mpi.c  QMP_split_mpi.c  QMP_topology_mpi.c
lib/mpi/.deps/: QMP_comm_mpi.Po  QMP_error_mpi.Po  QMP_init_mpi.Po  QMP_mem_mpi.Po  QMP_split_mpi.Po  QMP_topology_mpi.Po
src/: Makefile.am  Makefile.in  QMP.h  QMP_P_COMMON.h  QMP_P_GM.h  QMP_P_MPI.h  QMP_P_SINGLE.h  QMP_comm_gm.c  QMP_comm_mpi.c  QMP_comm_single.c  QMP_error_mpi.c  QMP_error_single.c  QMP_genutil.c  QMP_grid.c  QMP_init_gm.c  QMP_init_mpi.c  QMP_init_single.c  QMP_machine.c  QMP_mem_gm.c  QMP_mem_mpi.c  QMP_mem_single.c  QMP_run  QMP_topology.c  QMP_topology_gm.c  QMP_util.c  QMP_util_gm.c  QMP_util_mpi.c  qmp.h  qmp.hh  qmp.hpp
